--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
         "doctrine/doctrine-migrations-bundle": "^3.7",
         "doctrine/migrations": "^3.9",
         "doctrine/orm": "^3.6",
+        "psr/log": "^3.0",
+        "symfony/cache-contracts": "^3.6",
         "symfony/console": "7.4.*",
         "symfony/dotenv": "7.4.*",
         "symfony/flex": "^2",
         "symfony/form": "7.4.*",
         "symfony/framework-bundle": "7.4.*",
+        "symfony/http-client": "7.4.*",
         "symfony/runtime": "7.4.*",
         "symfony/security-bundle": "7.4.*",
         "symfony/twig-bundle": "7.4.*",
